# final-project-

./: main.py  originalText.txt  pyproject.toml  requirements.txt  translatedText.txt
