[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "final-project-testing"
version = "0.1.0"
[tool.poetry.dependencies]
googletrans = "^4.0.0rc1"
opencv-python = "^4.2"
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"
[tool.poetry.dev-dependencies]
